--- a/tickets/pubspec.yaml
+++ b/tickets/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
 
   fish_redux: ^0.3.4
 
+  flutter_svg: 0.17.3
+
   sqflite: ^1.3.0
 
   fluttertoast: ^7.1.1
@@ -57,7 +59,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/logo.png
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
